fixed mobile alignment for arrow_circle

--- a/styles.css
+++ b/styles.css
@@ -2761,7 +2761,7 @@ span{
     .image_container {
         & .arrow_circle {
           left: 20%;
-          bottom: 20%;
+          bottom: 17%;
         }
     }
     .shelter_finds.arrow_circle{
